--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.theapache64.swipesearch">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -12,7 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Swipe_Search">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.Swipe_Search"
+        tools:targetApi="m">
         <activity
             android:name=".ui.screen.MainActivity"
             android:exported="true"
